--- a/public/styles/guildSettings.css
+++ b/public/styles/guildSettings.css
@@ -187,6 +187,9 @@ h2 {
   margin-top: 1em;
   text-align: center;
 }
+.img {
+  object-fit: cover;
+}
 
 @media all and (min-height: 500px) {
   .button-area {
