--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -84,6 +84,10 @@ body {
   margin-left: 8rem;
 }
 
+.img {
+  object-fit: cover;
+}
+
 .form-block {
   margin-bottom: 1.5rem;
 }
